--- a/Latex/ReportAG.tex
+++ b/Latex/ReportAG.tex
@@ -83,7 +83,7 @@
 
 \section*{Abstract}
 
-In this project we explore the application of inverse kinematics to the control of a linkage in three-dimensional space. First, we construct a simple composite object which contains a chain of rigid rods of user-selectable lengths, that are connected by joints so as to allow full flexibility of movement. In the current implementation, the joints connecting the rigid rods can be restricted to either rotate purely in a particular two-dimensional plane in three-dimensional space, acting like simple hinges, or enabled to move freely in three-dimensional space, resulting in more complicated motions. The joints have the ability to be constrained to only move within user-defined limits, and the flexibility and rotation speed of the joints can be varied. Second, the method of inverse kinematics is explored in order to determine the appropriate configurations of the linkage at each time-step, i.e. the required angles of the joints when the linkage is given the task of reaching a user-specified target point. The method works by planning the motion towards a goal, which is defined by point in three-dimensional space, subject to constraints that ensure the target point is in a reachable region of the linkage; dependent on the overall length of the linkage and the maximum and minimum angles of the joints. Several commonly employed inverse kinematics techniques are discussed and evaluated, including nonlinear optimisation methods, but in the final implementation we utilise the Jacobian transpose method due to it's relatively simple implementation and fast computational speed, making it an attractive method for real-time and interactive applications such as this. Finally, the movement of the object is animated, and a number of both physical and non-physical parameters can be adjusted to deliver a visually appealing performance, for example by enforcing a slow-in and slow-out motion.
+In this project we explore the application of inverse kinematics to the control of a linkage in three-dimensional space. First, we construct a simple composite object which contains a chain of rigid rods of user-selectable lengths, each connected by joints so as to allow full flexibility of movement. In the current implementation, the joints connecting the rigid rods can be restricted to either rotate purely in a particular two-dimensional plane in three-dimensional space, acting like simple hinges, or enabled to move freely in three-dimensional space, resulting in more complicated motions. The joints have the ability to be constrained to only move within user-defined limits, and the flexibility and rotation speed of the joints can be varied. Second, the method of inverse kinematics is explored in order to determine the appropriate configurations of the linkage at each time-step, i.e. the required angles of the joints when the linkage is given the task of reaching a user-specified target point. The method works by planning the motion towards a goal, which is defined by point in three-dimensional space, subject to constraints that ensure the target point is in a reachable region of the linkage; dependent on the overall length of the linkage and the maximum and minimum angles of the joints. Several commonly employed inverse kinematics techniques are discussed and evaluated, including nonlinear optimisation methods, but in the final implementation we utilise the Jacobian transpose method due to its relatively simple implementation and fast computational speed, making it an attractive method for real-time and interactive applications such as this. Finally, the movement of the object is animated, and a number of both physical and non-physical parameters can be adjusted to deliver a visually appealing performance, for example by enforcing a slow-in and slow-out motion.
 
 \section{Introduction}
 \begin{figure}
@@ -108,7 +108,7 @@ The main objective of this investigation was to explore the problem of inverse k
 To implement a user-interactive way of choosing the target position for the end-effector of the linkage to reach in three-dimensional space.
 
 \item
-A way to change the physical properties of the linkage, such as the rate at which the joints can move, any specified constraints on the joints, and the slow-in and slow-out movement of the linkage as it leaves it's current position and approaches the target position respectively.
+A way to change the physical properties of the linkage, such as the rate at which the joints can move, any specified constraints on the joints, and the slow-in and slow-out movement of the linkage as it leaves its current position and approaches the target position respectively.
 
 \item
 To investigate whether to model and thereby vary the flexibility of the rods.
@@ -121,9 +121,9 @@ The subject of inverse kinematics has been much researched over the past 60 year
 
 There are a number of well-established methods of approaching the inverse kinematics problem which can be divided into four main categories of solver: geometrical/analytical algorithms, cyclic coordinate descent (CCD), differential algorithms, and hybrid methods which combine together various aspects of the first three techniques \cite{Madd04}. Geometrical and analytical algorithms, such as by \cite{Chin96} and \cite{Kwan00}, tend to be very quick because the inverse kinematics problem is essentially reduced to a single mathematical equation that only needs to be evaluated in a single step to produce a result. However, such methods have limitations, particularly for linkages with a large number of links, and so in these situations it is impractical to reduce the problem to a single-step mathematical equation. This means that in the field of character animation, where we may have many links and multiple end-effectors, geometrical/analytical techniques are less useful. However, for a project such as this where we are dealing with only a few links and a single end-effector, this could perhaps be an appropriate method. \\
 
-Another common approach is cyclic coordinate descent, which uses a greedy algorithm to solve for each joint in turn, and repeats this process until a satisfactory solution is found. Solvers based on this method include those by \cite{Eber01} and \cite{Wang91}. Although this method is relatively simple and fast, it suffers from inaccuracies. Another issue with this technique is that the joint angles are updated one at a time, which has the undesirable and unrealistic result of earlier joints moving by greater amounts than later links in the linkage chain. \\
+Another common approach is cyclic coordinate descent, which uses a greedy algorithm to solve for each joint in turn, and repeats this process until a satisfactory solution is found \cite{Bonding07}. Solvers based on this method include those by \cite{Eber01} and \cite{Wang91}. Although this method is relatively simple and fast, it suffers from inaccuracies. Another issue with this technique is that the joint angles are updated one at a time, which has the undesirable and unrealistic result of earlier joints moving by greater amounts than later links in the chain. \\
 
-Differential-based techniques utilise an iterative approach that requires multiple steps to reach a solution, such as those by \cite{Watt92} and \cite{Zhao94}. According to Martin F\v{e}dor  \cite{Fedor2003}, most inverse kinematics systems tend to use the Jacobian inverse method, despite the fact that this method suffers from singularity problems \cite{Bonding07}. The reason these techniques remain in widespread use is due to their relative ease of implementation and speed for real-time applications. Since all joint angles are updated in a single step, the linkage movements are dissipated over all the links, which results in a more realistic and pleasing movement. 
+Differential-based techniques utilise an iterative approach that requires multiple steps to reach a solution, such as those by \cite{Watt92} and \cite{Zhao94}. According to Martin F\v{e}dor  \cite{Fedor2003}, most inverse kinematics systems tend to use the Jacobian inverse method, despite the fact that this method suffers from singularity problems \cite{Bonding07}. The reason these techniques remain in widespread use is due to their relative ease of implementation and speed for real-time applications. Since all joint angles are updated in a single step, the linkage movements are dissipated over all the links, which results in a more realistic and pleasing movement. The Jacobian method is essentially equivalent to a gradient descent optimisation, and so clearly we could also employ other optimisation algorithms, such as Levenberg-Marquardt least squares and Newton's method, as discussed by Bonding et al. \cite{Bonding07}.
 
 
 
@@ -198,7 +198,7 @@ Where $\vect{v}_i$ is the axis of rotation for the $i$th joint, and $\vect{P}_i$
 \frac{\dn{f}}{\dn{\theta_i}} \approx \frac{f(\theta_i+\delta) - f(\theta_i-\delta)}{2\delta} 
 \end{equation}
  
-Inverting the Jacobian matrix is an expensive operation. Since the matrix is often not square, the pseudo inverse can be implemented
+Inverting the Jacobian matrix is an expensive operation. Since the matrix is often not square, the pseudoinverse can be implemented
 
 \begin{equation}
 J^+ = (J^TJ)^{-1}J^T
@@ -234,7 +234,7 @@ Calculate the difference between the goal position and the position of the end-e
 Compute the Jacobian matrix $J$ using the current joint angles and the appropriate method
 
 \item
-Calculate the pseudo-inverse of the Jacobian $J^+$, or alternatively the transpose $J^T$
+Calculate the pseudoinverse of the Jacobian $J^+$, or alternatively the transpose $J^T$
 
 \item
 Determine $error = ||(I - JJ^{-1})\Delta \vect{E}||$
@@ -278,7 +278,7 @@ In practice, the simple algorithm above does not always produce satisfying resul
 \vect{K}_i = \frac{1}{w_i \alpha_i}
 \end{equation}
 
-where $w_i$ is proportional to the length of link $i$, and is intended to offset the effects of the overall scale of the world. The $\alpha_i$ is a weighting factor for joint $i$, which can be thought as the responsiveness of the joint to an applied force. In future implementations, this parameter could be made available to the user to allow modification of the a joint's perceived stiffness. \\
+where $w_i$ is proportional to the length of link $i$, and is intended to offset the effects of the overall scale of the world. The $\alpha_i$ is a weighting factor for joint $i$, which can be thought as the responsiveness of the joint to an applied force. In future implementations, this parameter could be made available to the user to allow modification of a joint's perceived stiffness. \\
 
 Although Welman's proposed scaling matrix is currently a constant gain matrix, it would be relatively easy to make this into a time-varying matrix $\vect{K}(t)$. A very basic implementation could be to simply vary the $i$th scaling parameters in the matrix when the $i$th joint gets within a certain threshold distance from the goal position.
 
@@ -303,7 +303,7 @@ Our software was built on top of OpenGL version 4.3 so we can adopt the shaders 
 The C++11 standard is used as it introduces better default thread and mutex libraries as well as other improvements. \\
 
 
-First, we consider all the necessary conversions that let us display the three-dimensional world on a two-dimensional screen surface. Initially we have the \(z\) value set to zero, and hence worked in a two-dimensional plane. In our world model each object has it's own model transformation matrix M. We also have a camera matrix that defines the camera position and orientation. Lastly, a projection matrix describes the mapping of a pinhole camera which plots the three-dimensional world onto a two-dimensional screen. For every object in the scene, pixel/screen coordinates \([u, v, 1]\) are defined by multiplying the vertices of each object by the Model-View-Projection (MVP) transformation matrix which gives the position of each pixel on the screen, i.e. transformed vertex = M \(\times\) V \(\times\) P \(\times\) object vertex. \\
+First, we consider all the necessary conversions that let us display the three-dimensional world on a two-dimensional screen surface. Initially we have the \(z\) value set to zero, and hence worked in a two-dimensional plane. In our world model each object has its own model transformation matrix M. We also have a camera matrix that defines the camera position and orientation. Lastly, a projection matrix describes the mapping of a pinhole camera which plots the three-dimensional world onto a two-dimensional screen. For every object in the scene, pixel/screen coordinates \([u, v, 1]\) are defined by multiplying the vertices of each object by the Model-View-Projection (MVP) transformation matrix which gives the position of each pixel on the screen, i.e. transformed vertex = M \(\times\) V \(\times\) P \(\times\) object vertex. \\
 
 
 \lstset{
@@ -362,12 +362,12 @@ At this point we added a chain of rectangles and lines, where lines represented 
 %}
 %\end{lstlisting}
 
-In order to achieve a fluid and efficient rendering, we made the simulation process independent of rendering. Simulation and rendering are performed on two different threads, and have to access a shared resource concurrently. The synchronisation of these two processes is encapsulated in the SimulationController class which uses mutual exclusion lock variables. \\
+In order to achieve a fluid and efficient rendering, we made the simulation process independent of rendering. Simulation and rendering are performed on two different threads, and have to access a shared resource concurrently. The synchronisation of these two processes is encapsulated in the \texttt{SimulationController} class which uses mutual exclusion lock variables. \\
 % The rendering process has access to all the chain data while the simulation only uses the angles and lengths (taken from the copy of the chain) to perform the numerical calculations which advance the motion in time. \\
 
 For visual appeal, we draw a trail that follows the chain tip. A circular array is used for efficient rendering; a fixed buffer is allocated on the GPU at the beginning of the simulation and we track the movement of the tip of the chain. Each time the tip moves a sufficient (predetermined) amount, we record the current position and include it in the circular array. Once we run out of space, we return to the start of the array and replace the oldest value with the new one. Then the rendering is performed sequentially with all remaining values unchanged until we again reach the end of the array. This allows us to make only small uploads of data to the GPU. \\
 
-At this stage we added the simulation code originally developed in Matlab to our two-dimensional model, as shown in Figure~\ref{fig:2Dpicture}. Instead of calculating the pseudo-inverse and the error, only the transpose of the Jacobian is calculated. To allow user input, we draw a triangle which could be moved using the mouse, and was used to mark the goal position. The mouse position was transformed using an inverse orthogonal projection. \\
+At this stage we added the simulation code originally developed in Matlab to our two-dimensional model, as shown in Figure~\ref{fig:2Dpicture}. Instead of calculating the pseudoinverse and the error, only the transpose of the Jacobian is calculated. To allow user input, we draw a triangle which could be moved using the mouse, and was used to mark the goal position. The mouse position was transformed using an inverse orthogonal projection. \\
 
 \begin{figure}[h]
 \centering
@@ -376,7 +376,7 @@ At this stage we added the simulation code originally developed in Matlab to our
 \label{fig:2Dpicture}
 \end{figure}
 
-One of the problems we faced had to do with the simulation thread accessing the rendering state, causing the software to fail if the frame rate was too high. The problem was solved by allowing the simulation to access only the simulation data. Here we also used data encapsulation; a new class, called ChainModel, was created that only had the simulation data. The Chain class is a subclass of the ChainModel and with added attributes and methods for rendering purposes. The same applies to bone and joint classes. The communication protocol between the simulation thread and the rendering thread is displayed in Figure~\ref{fig:treadhDiagram}.  \\
+One of the problems we faced had to do with the simulation thread accessing the rendering state, causing the software to fail if the frame rate was too high. The problem was solved by allowing the simulation to access only the simulation data. Here we also used data encapsulation; a new class, called \texttt{ChainModel}, was created that only had the simulation data. The Chain class is a subclass of the ChainModel and with added attributes and methods for rendering purposes. The same applies to bone and joint classes. The communication protocol between the simulation thread and the rendering thread is displayed in Figure~\ref{fig:treadhDiagram}.  \\
 
 The simulation thread is either simulating or waiting for a new goal. It also checks when the end-effector is close to the goal and it stops at a given threshold. The user can input a new goal position at any time, as the simulation loop will then solve for the new goal using the current chain state.\\
 
@@ -401,8 +401,8 @@ currentMat = currentMat * glm::rotate(joints[i].getZRotAngle(), zAxis)
 One of the objectives was to have controllable slow-in and slow-out motion at the start and end of each simulation. This was achieved by normalising the computed change in joint angles $\Delta \params$ at each step. The step size was then scaled linearly at the beginning of the motion to have the effect of slow-in, then kept constant, before decreasing linearly for the slow-out motion. This is shown by the speed-distance graph in Figure~\ref{fig:scaling}. As the path taken from the initial position to the goal is unknown, the interval for the slow-in/slow-out motion was chosen by examining the shortest path.\\
 \begin{figure}[h]
 \centering
-\includegraphics[scale=0.5]{SpeedDiagram}
-\caption{Diagram illustrating the proposed slow-in and slow-out method as the end-effect moves from it's initial position to the goal.}
+\includegraphics[scale=0.4]{SpeedDiagram}
+\caption{Diagram illustrating the proposed slow-in and slow-out method as the end-effect moves from its initial position to the goal.}
 \label{fig:scaling}
 \end{figure}
 
@@ -410,15 +410,15 @@ One of the objectives was to have controllable slow-in and slow-out motion at th
   
 \section{Conclusion}
 
-We have used the method of inverse kinematics to create a three-dimensional linkage that moves towards a specified goal position. The location of the goal in three-dimensional space can be adjusted by the user through keyboard input, and it's position can be changed mid-way through the simulation so that the linkage reacts accordingly. Although the rendering and lighting of the linkage is relatively simplistic in it's current implementation, it does effectively display the three-dimensional nature of the dynamic model. The inclusion of the tracer that describes the path of the end-effector is an effective addition, which emphasises the movement of the linkage and provides a visually pleasing result. \\
+We have used the method of inverse kinematics to create a three-dimensional linkage that moves towards a specified goal position. The location of the goal in three-dimensional space can be adjusted by the user through keyboard input, and its position can be changed mid-way through the simulation so that the linkage reacts accordingly. Although the rendering and lighting of the linkage is relatively simplistic in its current implementation, it does effectively display the three-dimensional nature of the dynamic model. The inclusion of the tracer that describes the path of the end-effector is an effective addition, which emphasises the movement of the linkage and provides a visually pleasing result. \\
 
-A number of parameters have been included that enable the user to control the physical properties of the linkage. The parameters must be hard set within the source code, prior to the simulation, but ideally we would prefer to set them in run-time through the use of a gui. For example, the rate at which the joints move can be altered so that certain joints appear to be more flexible than others. Constraints on the joints can be included by specifying the maximum and minimum allowable angles for the whole chain. In addition, the speed of the linkage can be tuned to provide a more organic behaviour; so that the linkage accelerates at the start of its motion and decelerates towards the end. \\
+A number of parameters have been included that enable the user to control the physical properties of the linkage. The parameters must be hard set within the source code, prior to the simulation, but ideally we would prefer to set them in run-time through the use of a GUI. For example, the rate at which the joints move can be altered so that certain joints appear to be more flexible than others. Constraints on the joints can be included by specifying the maximum and minimum allowable angles for the whole chain. In addition, the speed of the linkage can be tuned to provide a more organic behaviour; so that the linkage accelerates at the start of its motion and decelerates towards the end. \\
 
 We provide a real-time OpenGL implementation of the inverse kinematics problem for an arbitrary number of joints, which runs smoothly, and solves for any target position within the range of the linkage. However, the system can suffer from oscillations when the target point is just inside the boundary. The system is also slower to solve when the target point is placed in certain positions, for example if it is placed at a location incident with the chain when the chain is fully stretched.
 
 \subsection{Future Work}
 
-A number of directions remain for future work. We would like to experiment with different shading models to achieve higher realism. Another area of future work is to include a graphical user interface to give the user direct control of the simulation  parameters, such as the stiffness, and the slow in and slow out motion. It would be interesting to explore other non-linear optimisation methods, such as Newton's method which incorporates the higher order derivatives. In addition,  alternative ways of implementing the constraints could be tested, for instance the method of Lagrange multipliers. Finally, we are interested in loading three-dimensional mesh objects and textures to replace the geometric shapes used in the current version. The number of end effectors could be increased to give the object more character and charm. 
+A number of directions remain for future work. We would like to experiment with different shading and lighting models to achieve a higher level of realism. Another area for further work would be to include a graphical user interface to provide the user with direct control over the simulation parameters, such as the joint stiffness, and the slow-in and slow-out motion, which are currently embedded in the code. It would be interesting to explore other nonlinear optimisation methods to solve the inverse kinematics problem, such as Newton's method which incorporates higher order derivatives. In addition, alternative ways of implementing the constraints could be investigated, for instance the method of Lagrange multipliers. Finally, we are interested in loading three-dimensional mesh objects and textures into OpenGL to replace the simplistic geometric shapes used in the current implementation. The number of end-effectors could be increased to build more complex linkages and even create underlying skeleton rigs for more interesting objects or character models that could be animated. 
 
 %----------------------------------------------------------------------------------------
 \nocite{Fedor2003}
